--- a/package.json
+++ b/package.json
@@ -22,7 +22,14 @@
   },
   "dependencies": {
     "bluebird": "^3.4.6",
-    "node-fetch": "^1.6.3"
+    "graphiql": "^0.7.8",
+    "graphql": "^0.7.2",
+    "graphql-relay": "^0.4.3",
+    "mongoose": "^4.6.4",
+    "node-fetch": "^1.6.3",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.0",
