--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "npm": ">=3.3 <4"
   },
   "dependencies": {
+    "babel-polyfill": "^6.16.0",
     "bluebird": "^3.4.6",
+    "express": "^4.14.0",
+    "express-graphql": "^0.5.4",
     "graphiql": "^0.7.8",
     "graphql": "^0.7.2",
     "graphql-relay": "^0.4.3",
     "mongoose": "^4.6.4",
     "node-fetch": "^1.6.3",
+    "pretty-error": "^2.0.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "whatwg-fetch": "^1.0.0"
@@ -34,9 +38,18 @@
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.0",
     "autoprefixer": "^6.5.1",
+    "babel-cli": "^6.16.0",
     "babel-core": "^6.17.0",
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.5",
+    "babel-plugin-transform-react-constant-elements": "^6.9.1",
+    "babel-plugin-transform-react-inline-elements": "^6.8.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.10",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-node5": "^11.1.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "browser-sync": "^2.17.5",
     "eslint": "^3.8.1",
     "eslint-config-airbnb": "^12.0.0",
@@ -64,6 +77,7 @@
     "postcss-selector-matches": "^2.0.5",
     "postcss-selector-not": "^2.0.0",
     "postcss-url": "^5.1.2",
+    "react-hot-loader": "^3.0.0-beta.6",
     "rimraf": "^2.5.4",
     "webpack": "^1.13.2",
     "webpack-hot-middleware": "^2.13.0",
