--- a/package.json
+++ b/package.json
@@ -23,18 +23,24 @@
   "dependencies": {
     "babel-polyfill": "^6.16.0",
     "bluebird": "^3.4.6",
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-graphql": "^0.5.4",
+    "express-jwt": "^5.1.0",
     "graphiql": "^0.7.8",
     "graphql": "^0.7.2",
     "graphql-relay": "^0.4.3",
+    "jsonwebtoken": "latest",
     "mongoose": "^4.6.4",
     "node-fetch": "^1.6.3",
+    "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
     "pretty-error": "^2.0.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-router": "^3.0.0",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
@@ -48,11 +54,12 @@
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.2.10",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-latest": "^6.16.0",
     "babel-preset-node5": "^11.1.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "browser-sync": "^2.17.5",
+    "chai": "^3.5.0",
     "eslint": "^3.8.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-loader": "^1.6.0",
@@ -64,6 +71,7 @@
     "git-repository": "^0.1.4",
     "glob": "^7.1.1",
     "mkdirp": "^0.5.1",
+    "mocha": "^3.1.2",
     "pixrem": "^3.0.2",
     "pleeease-filters": "^3.0.0",
     "postcss-calc": "^5.3.1",
