--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.14.0",
     "express-graphql": "^0.5.4",
     "express-jwt": "^5.1.0",
+    "express-session": "^1.14.1",
     "graphiql": "^0.7.8",
     "graphql": "^0.7.2",
     "graphql-relay": "^0.4.3",
@@ -40,6 +41,7 @@
     "pretty-error": "^2.0.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-relay": "^0.9.3",
     "react-router": "^3.0.0",
     "whatwg-fetch": "^1.0.0"
   },
@@ -58,6 +60,7 @@
     "babel-preset-node5": "^11.1.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-relay-plugin": "^0.9.3",
     "browser-sync": "^2.17.5",
     "chai": "^3.5.0",
     "eslint": "^3.8.1",
@@ -95,6 +98,11 @@
   },
   "babel": {
     "presets": [
+      {
+        "plugins": [
+          "./tools/babelRelayPlugin"
+        ]
+      },
       "react",
       "node5",
       "stage-0"
@@ -150,6 +158,7 @@
     }
   },
   "scripts": {
+    "update-schema": "babel-node tools/updateSchema.js",
     "lint:js": "eslint src tools",
     "lint:css": "stylelint \"src/**/*.{css,less,scss,sss}\"",
     "lint": "npm run lint:js && npm run lint:css",
