--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.2.10",
     "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-node5": "^11.1.0",
     "babel-preset-react": "^6.16.0",
