--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
     "express": "^4.14.0",
-    "express-graphql": "^0.5.4",
+    "express-graphql": "^0.6.1",
     "express-jwt": "^5.1.0",
     "express-session": "^1.14.1",
-    "graphiql": "^0.7.8",
-    "graphql": "^0.7.2",
+    "graphiql": "^0.8.0",
+    "graphql": "^0.8.2",
     "graphql-relay": "^0.4.3",
     "isomorphic-relay": "^0.7.3",
     "isomorphic-relay-router": "^0.8.4",
@@ -45,7 +48,7 @@
     "react-dom": "^15.3.2",
     "react-relay": "^0.9.3",
     "react-router": "^2.8.1",
-    "whatwg-fetch": "^1.0.0"
+    "whatwg-fetch": "^2.0.0"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.0",
