--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.16.0",
+    "babel-runtime": "^6.18.0",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
+    "classnames": "^2.2.5",
     "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "^1.4.3",
     "eslint-config-airbnb": "^12.0.0",
@@ -38,6 +40,7 @@
     "graphql-relay": "^0.4.3",
     "isomorphic-relay": "^0.7.3",
     "isomorphic-relay-router": "^0.8.4",
+    "isomorphic-style-loader": "^1.1.0",
     "jsonwebtoken": "latest",
     "mongoose": "^4.6.4",
     "node-fetch": "^1.6.3",
@@ -71,6 +74,7 @@
     "babel-relay-plugin-loader": "^0.9.0",
     "browser-sync": "^2.17.5",
     "chai": "^3.5.0",
+    "css-loader": "^0.26.0",
     "eslint": "^3.8.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-loader": "^1.6.0",
@@ -91,6 +95,7 @@
     "postcss-custom-properties": "^5.0.1",
     "postcss-custom-selectors": "^3.0.0",
     "postcss-flexbugs-fixes": "^2.0.0",
+    "postcss-loader": "^1.1.1",
     "postcss-media-minmax": "^2.1.2",
     "postcss-nested": "^1.0.0",
     "postcss-nesting": "^2.3.1",
