--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/jonirrings/react-stack#readme",
   "engines": {
-    "node": ">=5.0 <7",
-    "npm": ">=3.3 <4"
+    "node": ">=6.5",
+    "npm": ">=3.10"
   },
   "dependencies": {
     "babel-polyfill": "^6.16.0",
@@ -28,6 +28,7 @@
     "classnames": "^2.2.5",
     "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "^1.4.3",
+    "core-js": "2.4.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
@@ -35,15 +36,20 @@
     "express-graphql": "^0.6.1",
     "express-jwt": "^5.1.0",
     "express-session": "^1.14.1",
+    "fastclick": "1.0.6",
+    "fbjs": "0.8.6",
+    "front-matter": "2.1.1",
     "graphiql": "^0.8.0",
     "graphql": "^0.8.2",
     "graphql-relay": "^0.4.3",
     "isomorphic-relay": "^0.7.3",
     "isomorphic-relay-router": "^0.8.4",
     "isomorphic-style-loader": "^1.1.0",
-    "jsonwebtoken": "latest",
+    "jsonwebtoken": "7.1.9",
+    "markdown-it": "8.1.0",
     "mongoose": "^4.6.4",
     "node-fetch": "^1.6.3",
+    "normalize.css": "5.0.0",
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
@@ -56,39 +62,43 @@
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.0",
-    "autoprefixer": "^6.5.1",
-    "babel-cli": "^6.16.0",
-    "babel-core": "^6.17.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-react-constant-elements": "^6.9.1",
-    "babel-plugin-transform-react-inline-elements": "^6.8.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.2.10",
+    "autoprefixer": "^6.5.3",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.8",
+    "babel-plugin-rewire": "^1.0.0",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.18.0",
     "babel-preset-latest": "^6.16.0",
-    "babel-preset-node5": "^11.1.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.18.0",
+    "babel-template": "^6.16.0",
+    "babel-types": "^6.19.0",
     "babel-relay-plugin": "^0.9.3",
     "babel-relay-plugin-loader": "^0.9.0",
-    "browser-sync": "^2.17.5",
+    "browser-sync": "^2.18.0",
     "chai": "^3.5.0",
     "css-loader": "^0.26.0",
-    "eslint": "^3.8.1",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-loader": "^1.6.0",
-    "eslint-plugin-import": "^1.16.0",
+    "enzyme": "^2.6.0",
+    "eslint": "^3.10.2",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.4.1",
+    "eslint-plugin-react": "^6.7.1",
     "extend": "^3.0.0",
+    "file-loader": "^0.9.0",
     "gaze": "^1.1.2",
     "git-repository": "^0.1.4",
     "glob": "^7.1.1",
+    "json-loader": "^0.5.4",
     "mkdirp": "^0.5.1",
     "mocha": "^3.1.2",
     "pixrem": "^3.0.2",
     "pleeease-filters": "^3.0.0",
+    "postcss": "^5.2.5",
     "postcss-calc": "^5.3.1",
     "postcss-color-function": "^2.0.1",
     "postcss-custom-media": "^5.0.1",
@@ -100,20 +110,38 @@
     "postcss-nested": "^1.0.0",
     "postcss-nesting": "^2.3.1",
     "postcss-partial-import": "^2.1.0",
+    "postcss-pseudoelements": "^3.0.0",
     "postcss-selector-matches": "^2.0.5",
     "postcss-selector-not": "^2.0.0",
     "postcss-url": "^5.1.2",
+    "raw-loader": "^0.5.1",
+    "react-addons-test-utils": "15.4.0",
+    "react-deep-force-update": "^2.0.1",
     "react-hot-loader": "^3.0.0-beta.6",
+    "redbox-react": "^1.3.3",
     "rimraf": "^2.5.4",
-    "webpack": "^1.13.2",
-    "webpack-hot-middleware": "^2.13.0",
+    "sinon": "^2.0.0-pre.3",
+    "stylelint": "^7.6.0",
+    "stylelint-config-standard": "^15.0.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.3",
+    "webpack-hot-middleware": "^2.13.2",
     "webpack-middleware": "^1.5.1"
   },
   "babel": {
     "presets": [
       "react",
-      "node5",
       "stage-0"
+    ],
+    "plugins": [
+      "syntax-trailing-function-commas",
+      "transform-async-to-generator",
+      "transform-es2015-destructuring",
+      "transform-es2015-parameters",
+      "transform-es2015-duplicate-keys",
+      "transform-es2015-modules-commonjs",
+      "transform-exponentiation-operator",
+      "transform-runtime"
     ],
     "env": {
       "test": {
@@ -140,7 +168,8 @@
       "react/forbid-prop-types": "off",
       "react/jsx-filename-extension": "off",
       "react/no-danger": "off",
-      "react/no-unused-prop-types": "off"
+      "react/no-unused-prop-types": "off",
+      "react/prefer-stateless-function": "off"
     }
   },
   "stylelint": {
@@ -175,7 +204,7 @@
     "lint:js": "eslint src tools",
     "lint:css": "stylelint \"src/**/*.{css,less,scss,sss}\"",
     "lint": "npm run lint:js && npm run lint:css",
-    "test": "mocha \"src/**/*.test.js\" --require test/setup.js --compilers js:babel-register",
+    "test": "mocha \"src/**/*.test.js\" --require babel-register --require test/setup.js",
     "test:watch": "npm run test -- --reporter min --watch",
     "clean": "babel-node tools/run clean",
     "copy": "babel-node tools/run copy",
