--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "^1.4.3",
     "core-js": "2.4.1",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-plugin-import": "^1.16.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "draft-js": "^0.9.1",
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
     "express-jwt": "^5.1.0",
@@ -49,15 +47,17 @@
     "markdown-it": "8.1.0",
     "mongoose": "^4.6.4",
     "node-fetch": "^1.6.3",
-    "normalize.css": "5.0.0",
     "node-uuid": "^1.4.7",
+    "normalize.css": "5.0.0",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
     "pretty-error": "^2.0.2",
+    "query-string": "4.2.3",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-relay": "^0.9.3",
     "react-router": "^2.8.1",
+    "source-map-support": "0.4.6",
     "whatwg-fetch": "^2.0.0"
   },
   "devDependencies": {
