--- a/package.json
+++ b/package.json
@@ -201,7 +201,7 @@
   },
   "scripts": {
     "update-schema": "babel-node tools/run updateSchema",
-    "lint:js": "eslint src tools",
+    "lint:js": "eslint src tools --fix",
     "lint:css": "stylelint \"src/**/*.{css,less,scss,sss}\"",
     "lint": "npm run lint:js && npm run lint:css",
     "test": "mocha \"src/**/*.test.js\" --require babel-register --require test/setup.js",
