--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "isomorphic-relay": "^0.7.3",
     "isomorphic-relay-router": "^0.8.4",
     "isomorphic-style-loader": "^1.1.0",
-    "jsonwebtoken": "7.1.9",
-    "markdown-it": "8.1.0",
+    "jsonwebtoken": "^7.1.9",
+    "markdown-it": "^8.1.0",
     "mongoose": "^4.6.4",
     "node-fetch": "^1.6.3",
     "node-uuid": "^1.4.7",
@@ -55,8 +55,10 @@
     "query-string": "4.2.3",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-relay": "^0.9.3",
+    "react-relay": "^0.10.0",
     "react-router": "^2.8.1",
+    "socket.io": "^1.7.2",
+    "socket.io-client": "^1.7.2",
     "source-map-support": "0.4.6",
     "whatwg-fetch": "^2.0.0"
   },
@@ -76,7 +78,7 @@
     "babel-register": "^6.18.0",
     "babel-template": "^6.16.0",
     "babel-types": "^6.19.0",
-    "babel-relay-plugin": "^0.9.3",
+    "babel-relay-plugin": "^0.10.0",
     "babel-relay-plugin-loader": "^0.9.0",
     "browser-sync": "^2.18.0",
     "chai": "^3.5.0",
