mv schema file to cache dir

--- a/package.json
+++ b/package.json
@@ -198,7 +198,7 @@
   },
   "metadata": {
     "graphql": {
-      "schema": "./data/schema.json"
+      "schema": "cache/schema.json"
     }
   },
   "scripts": {
