add server end subscription, not tested, TODO: add client end subscription

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "graphiql": "^0.8.0",
     "graphql": "^0.8.2",
     "graphql-relay": "^0.4.3",
+    "graphql-relay-subscription": "^0.1.2",
     "isomorphic-relay": "^0.7.3",
     "isomorphic-relay-router": "^0.8.4",
     "isomorphic-style-loader": "^1.1.0",
@@ -58,6 +59,7 @@
     "react-dom": "^15.3.2",
     "react-relay": "^0.10.0",
     "react-router": "^2.8.1",
+    "relay-subscriptions": "^1.0.0",
     "socket.io": "^1.7.2",
     "socket.io-client": "^1.7.2",
     "source-map-support": "0.4.6",
