--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "^1.4.3",
     "core-js": "2.4.1",
+    "dataloader": "^1.2.0",
     "draft-js": "^0.9.1",
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
@@ -42,6 +43,7 @@
     "graphql": "^0.8.2",
     "graphql-relay": "^0.4.3",
     "graphql-relay-subscription": "^0.1.2",
+    "immutable": "^3.8.1",
     "isomorphic-relay": "^0.7.3",
     "isomorphic-relay-router": "^0.8.4",
     "isomorphic-style-loader": "^1.1.0",
@@ -60,6 +62,7 @@
     "react-relay": "^0.10.0",
     "react-router": "^2.8.1",
     "relay-subscriptions": "^1.0.0",
+    "rxjs": "^5.0.1",
     "socket.io": "^1.7.2",
     "socket.io-client": "^1.7.2",
     "source-map-support": "0.4.6",
