--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "express-session": "^1.14.1",
     "extend": "^3.0.0",
     "fastclick": "1.0.6",
-    "fbjs": "0.8.6",
+    "fbjs": "^0.8.8",
     "front-matter": "2.1.1",
     "graphiql": "^0.8.0",
     "graphql": "^0.8.2",
@@ -76,16 +76,17 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.8",
     "babel-plugin-rewire": "^1.0.0",
+    "babel-plugin-transform-flow-strip-types": "^6.21.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
+    "babel-relay-plugin": "^0.10.0",
+    "babel-relay-plugin-loader": "^0.10.0",
     "babel-template": "^6.16.0",
     "babel-types": "^6.19.0",
-    "babel-relay-plugin": "^0.10.0",
-    "babel-relay-plugin-loader": "^0.9.0",
     "browser-sync": "^2.18.0",
     "chai": "^3.5.0",
     "css-loader": "^0.26.0",
@@ -93,6 +94,7 @@
     "eslint": "^3.10.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-loader": "^1.6.1",
+    "eslint-plugin-flowtype": "^2.29.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.7.1",
@@ -148,6 +150,7 @@
       "transform-es2015-duplicate-keys",
       "transform-es2015-modules-commonjs",
       "transform-exponentiation-operator",
+      "transform-flow-strip-types",
       "transform-runtime"
     ],
     "env": {
