--- a/package.json
+++ b/package.json
@@ -93,8 +93,8 @@
     "enzyme": "^2.6.0",
     "eslint": "^3.10.2",
     "eslint-config-airbnb": "^13.0.0",
+    "eslint-config-airbnb-flow": "^1.0.2",
     "eslint-loader": "^1.6.1",
-    "eslint-plugin-flowtype": "^2.29.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.7.1",
