--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "rxjs": "^5.0.1",
     "socket.io": "^1.7.2",
     "socket.io-client": "^1.7.2",
-    "source-map-support": "0.4.6",
+    "source-map-support": "^0.4.6",
     "whatwg-fetch": "^2.0.0"
   },
   "devDependencies": {
