:arrow_up:dependencies updated
Former-commit-id: b757651a6e29ef92c64c7c239463a8e3e7448f65

--- a/package.json
+++ b/package.json
@@ -46,14 +46,14 @@
     "isomorphic-relay-router": "^0.8.4",
     "isomorphic-style-loader": "^1.1.0",
     "jsonwebtoken": "^7.1.9",
-    "mongoose": "^4.6.4",
+    "mongoose": "^4.7.7",
     "node-fetch": "^1.6.3",
     "node-uuid": "^1.4.7",
     "normalize.css": "5.0.0",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
     "pretty-error": "^2.0.2",
-    "query-string": "4.2.3",
+    "query-string": "^4.2.3",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-relay": "^0.10.0",
@@ -90,7 +90,7 @@
     "css-loader": "^0.26.0",
     "enzyme": "^2.6.0",
     "eslint": "^3.10.2",
-    "eslint-config-airbnb": "^13.0.0",
+    "eslint-config-airbnb": "^14.0.0",
     "eslint-config-airbnb-flow": "^1.0.2",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-css-modules": "^1.0.9",
@@ -125,7 +125,7 @@
     "postcss-selector-not": "^2.0.0",
     "postcss-url": "^5.1.2",
     "raw-loader": "^0.5.1",
-    "react-addons-test-utils": "15.4.1",
+    "react-addons-test-utils": "^15.4.1",
     "react-deep-force-update": "^2.0.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "redbox-react": "^1.3.3",
