:arrow_up:follow 'react-starter-kit', migrated to webpack2, warnings to be resolved
Former-commit-id: f9f6edd00753b696d94b7caea24528500306f0f1

--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -1,4 +1,7 @@
 {
-  "extends": ["airbnb", "airbnb-flow"],
-  "parser": "babel-eslint"
+  "extends": ["airbnb"],
+  "parser": "babel-eslint",
+  "rules":{
+    "react/jsx-filename-extension":"off"
+  }
 }
