--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-stack",
-  "version": "1.0.0",
+  "version": "0.0.1",
+  "private": true,
   "description": "An isomorphic web app boilerplate (Node.js, Express, GraphQL, React.js, Babel 6, PostCSS, Webpack, Browsersync)",
   "repository": {
     "type": "git",
@@ -21,122 +22,127 @@
     "npm": ">=3.10"
   },
   "dependencies": {
-    "babel-polyfill": "^6.16.0",
-    "babel-runtime": "^6.18.0",
-    "bluebird": "^3.4.6",
-    "body-parser": "^1.15.2",
+    "babel-polyfill": "^6.22.0",
+    "babel-runtime": "^6.22.0",
+    "bluebird": "^3.4.7",
+    "body-parser": "^1.16.0",
     "classnames": "^2.2.5",
     "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "^1.4.3",
-    "core-js": "2.4.1",
+    "core-js": "^2.4.1",
     "dataloader": "^1.2.0",
-    "draft-js": "^0.9.1",
-    "express": "^4.14.0",
-    "express-graphql": "^0.6.1",
+    "draft-js": "^0.10.0",
+    "express": "^4.14.1",
+    "express-graphql": "^0.6.2",
     "express-jwt": "^5.1.0",
     "express-session": "^1.14.1",
-    "fastclick": "1.0.6",
+    "fastclick": "^1.0.6",
     "fbjs": "^0.8.8",
-    "graphiql": "^0.8.0",
-    "graphql": "^0.8.2",
-    "graphql-relay": "^0.4.3",
+    "graphiql": "^0.9.1",
+    "graphql": "^0.9.1",
+    "graphql-relay": "^0.5.1",
     "graphql-relay-subscription": "^0.1.2",
     "immutable": "^3.8.1",
     "isomorphic-relay": "^0.7.3",
     "isomorphic-relay-router": "^0.8.4",
     "isomorphic-style-loader": "^1.1.0",
-    "jsonwebtoken": "^7.1.9",
+    "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.7",
     "node-fetch": "^1.6.3",
     "node-uuid": "^1.4.7",
-    "normalize.css": "5.0.0",
+    "normalize.css": "^5.0.0",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
     "pretty-error": "^2.0.2",
-    "query-string": "^4.2.3",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "query-string": "^4.3.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-relay": "^0.10.0",
     "react-router": "^2.8.1",
     "relay-subscriptions": "^1.0.0",
     "rxjs": "^5.0.1",
     "socket.io": "^1.7.2",
     "socket.io-client": "^1.7.2",
-    "source-map-support": "^0.4.6",
-    "whatwg-fetch": "^2.0.0"
+    "source-map-support": "^0.4.11",
+    "whatwg-fetch": "^2.0.2"
   },
   "devDependencies": {
-    "assets-webpack-plugin": "^3.5.0",
-    "autoprefixer": "^6.5.3",
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.2",
+    "assets-webpack-plugin": "^3.5.1",
+    "autoprefixer": "^6.7.2",
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.8",
+    "babel-loader": "^6.2.10",
     "babel-plugin-rewire": "^1.0.0",
     "babel-plugin-transform-flow-strip-types": "^6.21.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-latest": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-latest": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
     "babel-preset-react-optimize": "^1.0.1",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-register": "^6.18.0",
-    "babel-relay-plugin": "^0.10.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "babel-relay-plugin": "0.10.0",
     "babel-relay-plugin-loader": "^0.10.0",
-    "babel-template": "^6.16.0",
-    "babel-types": "^6.19.0",
-    "browser-sync": "^2.18.0",
+    "babel-template": "^6.22.0",
+    "babel-types": "^6.22.0",
+    "browser-sync": "^2.18.7",
     "chai": "^3.5.0",
     "chokidar": "^1.6.1",
-    "css-loader": "^0.26.0",
-    "enzyme": "^2.6.0",
-    "eslint": "^3.10.2",
+    "css-loader": "^0.26.1",
+    "editorconfig-tools": "^0.1.1",
+    "enzyme": "^2.7.1",
+    "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-config-airbnb-flow": "^1.0.2",
     "eslint-loader": "^1.6.1",
-    "eslint-plugin-css-modules": "^1.0.9",
+    "eslint-plugin-css-modules": "^2.1.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.7.1",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
     "extend": "^3.0.0",
-    "file-loader": "^0.9.0",
-    "front-matter": "^2.1.0",
+    "file-loader": "^0.10.0",
+    "front-matter": "^2.1.2",
     "git-repository": "^0.1.4",
     "glob": "^7.1.1",
     "json-loader": "^0.5.4",
+    "lint-staged": "^3.3.0",
     "markdown-it": "^8.2.2",
     "mkdirp": "^0.5.1",
-    "mocha": "^3.1.2",
+    "mocha": "^3.2.0",
     "pixrem": "^3.0.2",
     "pleeease-filters": "^3.0.0",
-    "postcss": "^5.2.8",
+    "postcss": "^5.2.11",
     "postcss-calc": "^5.3.1",
     "postcss-color-function": "^2.0.1",
     "postcss-custom-media": "^5.0.1",
     "postcss-custom-properties": "^5.0.1",
     "postcss-custom-selectors": "^3.0.0",
-    "postcss-flexbugs-fixes": "^2.0.0",
-    "postcss-loader": "^1.1.1",
+    "postcss-flexbugs-fixes": "^2.1.0",
+    "postcss-loader": "^1.2.2",
     "postcss-media-minmax": "^2.1.2",
     "postcss-nested": "^1.0.0",
     "postcss-nesting": "^2.3.1",
-    "postcss-partial-import": "^2.1.0",
+    "postcss-partial-import": "^3.1.0",
     "postcss-pseudoelements": "^3.0.0",
     "postcss-selector-matches": "^2.0.5",
     "postcss-selector-not": "^2.0.0",
     "postcss-url": "^5.1.2",
+    "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
-    "react-addons-test-utils": "^15.4.1",
+    "react-addons-test-utils": "^15.4.2",
     "react-deep-force-update": "^2.0.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "redbox-react": "^1.3.3",
     "rimraf": "^2.5.4",
-    "sinon": "^2.0.0-pre.3",
-    "stylelint": "^7.6.0",
-    "stylelint-config-standard": "^15.0.0",
+    "sinon": "^2.0.0-pre.5",
+    "stylefmt": "^5.1.1",
+    "stylelint": "^7.7.1",
+    "stylelint-config-standard": "^15.0.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.3",
-    "webpack-hot-middleware": "^2.13.2",
-    "webpack-middleware": "^1.5.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.9.0",
+    "webpack-hot-middleware": "^2.16.1",
+    "write-file-webpack-plugin": "^3.4.2"
   },
   "babel": {
     "presets": [
@@ -184,9 +190,11 @@
       "import/no-extraneous-dependencies": "off",
       "react/forbid-prop-types": "off",
       "react/jsx-filename-extension": "off",
+      "react/no-array-index-key": "off",
       "react/no-danger": "off",
       "react/no-unused-prop-types": "off",
-      "react/prefer-stateless-function": "off"
+      "react/prefer-stateless-function": "off",
+      "react/require-default-props": "off"
     }
   },
   "stylelint": {
@@ -216,13 +224,30 @@
       "schema": "cache/schema.json"
     }
   },
+  "pre-commit": "lint:staged",
+  "lint-staged": {
+    "*.{md,sh,txt,xml,html,json}": [
+      "editorconfig-tools fix",
+      "git add"
+    ],
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.{css,less,scss,sss}": [
+      "stylefmt",
+      "stylelint",
+      "git add"
+    ]
+  },
   "scripts": {
     "update-schema": "babel-node tools/run updateSchema",
     "lint:js": "eslint src tools --fix",
     "lint:css": "stylelint \"src/**/*.{css,less,scss,sss}\"",
-    "lint": "npm run lint:js && npm run lint:css",
+    "lint:staged": "lint-staged",
+    "lint": "yarn run lint:js && yarn run lint:css",
     "test": "mocha \"src/**/*.test.js\" --require babel-register --require test/setup.js",
-    "test:watch": "npm run test -- --reporter min --watch",
+    "test:watch": "yarn run test -- --reporter min --watch",
     "clean": "babel-node tools/run clean",
     "copy": "babel-node tools/run copy",
     "bundle": "babel-node tools/run bundle",
