update deps and tools, refactor needed to make it build and run
Former-commit-id: c183ce510837e460c9d836e133c77bc20a8fda64

--- a/tools/.eslintrc
+++ b/tools/.eslintrc
@@ -1,7 +1,7 @@
 {
   "parser": "babel-eslint",
   "rules": {
-    "no-console": 0,
-    "global-require": 0
+    "no-console": "off",
+    "global-require": "off"
   }
 }
