--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "node": ">=6.5",
     "npm": ">=3.10"
   },
+  "browserslist": [
+    ">1%",
+    "last 4 versions",
+    "Firefox ESR",
+    "not ie < 9"
+  ],
   "dependencies": {
     "babel-polyfill": "^6.22.0",
-    "babel-runtime": "^6.22.0",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "classnames": "^2.2.5",
@@ -33,11 +38,10 @@
     "dataloader": "^1.2.0",
     "draft-js": "^0.10.0",
     "express": "^4.14.1",
-    "express-graphql": "^0.6.2",
+    "express-graphql": "^0.6.3",
     "express-jwt": "^5.1.0",
     "express-session": "^1.14.1",
     "fastclick": "^1.0.6",
-    "fbjs": "^0.8.8",
     "graphiql": "^0.9.1",
     "graphql": "^0.9.1",
     "graphql-relay": "^0.5.1",
@@ -49,7 +53,6 @@
     "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.7",
     "node-fetch": "^1.6.3",
-    "node-uuid": "^1.4.7",
     "normalize.css": "^5.0.0",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
@@ -75,11 +78,10 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-rewire": "^1.0.0",
     "babel-plugin-transform-flow-strip-types": "^6.21.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-latest": "^6.22.0",
+    "babel-preset-env": "^1.1.8",
     "babel-preset-react": "^6.22.0",
     "babel-preset-react-optimize": "^1.0.1",
-    "babel-preset-stage-0": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "babel-relay-plugin": "0.10.0",
     "babel-relay-plugin-loader": "^0.10.0",
@@ -91,18 +93,16 @@
     "css-loader": "^0.26.1",
     "editorconfig-tools": "^0.1.1",
     "enzyme": "^2.7.1",
-    "eslint": "^3.14.1",
-    "eslint-config-airbnb": "^14.0.0",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
     "eslint-config-airbnb-flow": "^1.0.2",
     "eslint-loader": "^1.6.1",
-    "eslint-plugin-css-modules": "^2.1.0",
+    "eslint-plugin-css-modules": "^2.2.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
-    "extend": "^3.0.0",
     "file-loader": "^0.10.0",
     "front-matter": "^2.1.2",
-    "git-repository": "^0.1.4",
     "glob": "^7.1.1",
     "json-loader": "^0.5.4",
     "lint-staged": "^3.3.0",
@@ -111,11 +111,11 @@
     "mocha": "^3.2.0",
     "pixrem": "^3.0.2",
     "pleeease-filters": "^3.0.0",
-    "postcss": "^5.2.11",
+    "postcss": "^5.2.12",
     "postcss-calc": "^5.3.1",
-    "postcss-color-function": "^2.0.1",
+    "postcss-color-function": "^3.0.0",
     "postcss-custom-media": "^5.0.1",
-    "postcss-custom-properties": "^5.0.1",
+    "postcss-custom-properties": "^5.0.2",
     "postcss-custom-selectors": "^3.0.0",
     "postcss-flexbugs-fixes": "^2.1.0",
     "postcss-loader": "^1.2.2",
@@ -136,29 +136,30 @@
     "rimraf": "^2.5.4",
     "sinon": "^2.0.0-pre.5",
     "stylefmt": "^5.1.1",
-    "stylelint": "^7.7.1",
-    "stylelint-config-standard": "^15.0.1",
+    "stylelint": "^7.8.0",
+    "stylelint-config-standard": "^16.0.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.9.0",
+    "webpack-bundle-analyzer": "^2.3.0",
+    "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
     "write-file-webpack-plugin": "^3.4.2"
   },
   "babel": {
     "presets": [
-      "react",
-      "stage-0"
+      [
+        "env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ],
+      "stage-2",
+      "react"
     ],
     "plugins": [
-      "transform-flow-strip-types",
-      "syntax-trailing-function-commas",
-      "transform-async-to-generator",
-      "transform-es2015-destructuring",
-      "transform-es2015-parameters",
-      "transform-es2015-duplicate-keys",
-      "transform-es2015-modules-commonjs",
-      "transform-exponentiation-operator",
-      "transform-runtime"
+      "transform-flow-strip-types"
     ],
     "env": {
       "test": {
@@ -184,17 +185,10 @@
       "browser": true
     },
     "rules": {
-      "arrow-parens": "off",
-      "generator-star-spacing": "off",
       "import/extensions": "off",
       "import/no-extraneous-dependencies": "off",
-      "react/forbid-prop-types": "off",
       "react/jsx-filename-extension": "off",
-      "react/no-array-index-key": "off",
-      "react/no-danger": "off",
-      "react/no-unused-prop-types": "off",
-      "react/prefer-stateless-function": "off",
-      "react/require-default-props": "off"
+      "react/prefer-stateless-function": "off"
     }
   },
   "stylelint": {
@@ -226,7 +220,7 @@
   },
   "pre-commit": "lint:staged",
   "lint-staged": {
-    "*.{md,sh,txt,xml,html,json}": [
+    "*.{cmd,html,json,md,sh,txt,xml,yml}": [
       "editorconfig-tools fix",
       "git add"
     ],
@@ -252,7 +246,8 @@
     "copy": "babel-node tools/run copy",
     "bundle": "babel-node tools/run bundle",
     "build": "babel-node tools/run build",
-    "deploy": "babel-node tools/run deployToAzureWebApps",
+    "build:stats": "yarn run build -- --release --analyse",
+    "deploy": "babel-node tools/run deploy",
     "render": "babel-node tools/run render",
     "serve": "babel-node tools/run runServer",
     "start": "babel-node tools/run start"
