--- a/package.json
+++ b/package.json
@@ -83,8 +83,8 @@
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "babel-relay-plugin": "0.10.0",
-    "babel-relay-plugin-loader": "^0.10.0",
+    "babel-relay-plugin": "^0.11.0",
+    "babel-relay-plugin-loader": "^0.11.0",
     "babel-template": "^6.22.0",
     "babel-types": "^6.22.0",
     "browser-sync": "^2.18.7",
@@ -118,15 +118,15 @@
     "postcss-custom-properties": "^5.0.2",
     "postcss-custom-selectors": "^3.0.0",
     "postcss-flexbugs-fixes": "^2.1.0",
+    "postcss-global-import": "^1.0.0",
+    "postcss-import": "^9.1.0",
     "postcss-loader": "^1.2.2",
     "postcss-media-minmax": "^2.1.2",
     "postcss-nested": "^1.0.0",
     "postcss-nesting": "^2.3.1",
-    "postcss-partial-import": "^3.1.0",
     "postcss-pseudoelements": "^3.0.0",
     "postcss-selector-matches": "^2.0.5",
     "postcss-selector-not": "^2.0.0",
-    "postcss-url": "^5.1.2",
     "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.4.2",
