--- a/package.json
+++ b/package.json
@@ -42,11 +42,10 @@
     "express-jwt": "^5.3.0",
     "express-session": "^1.14.1",
     "farce": "^0.2.1",
-    "fastclick": "^1.0.6",
     "found": "^0.3.1",
     "found-relay": "^v0.3.0-alpha.3",
     "graphiql": "^0.11.2",
-    "graphql": "^0.10.1",
+    "graphql": "^0.10.3",
     "graphql-relay": "^0.5.2",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
@@ -56,7 +55,7 @@
     "normalize.css": "^7.0.0",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
-    "pretty-error": "^2.1.0",
+    "pretty-error": "^2.1.1",
     "prop-types": "^15.5.10",
     "query-string": "^4.3.4",
     "react": "^15.6.1",
@@ -72,7 +71,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.0",
+    "babel-loader": "^7.1.1",
     "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-relay": "^1.1.0",
     "babel-plugin-rewire": "^1.1.0",
@@ -103,12 +102,13 @@
     "file-loader": "^0.11.2",
     "front-matter": "^2.1.2",
     "glob": "^7.1.2",
+    "husky": "^0.14.1",
     "lint-staged": "^4.0.0",
     "markdown-it": "^8.3.1",
     "mkdirp": "^0.5.1",
     "mocha": "^3.4.2",
     "null-loader": "^0.1.1",
-    "nyc": "^11.0.2",
+    "nyc": "^11.0.3",
     "opn-cli": "^3.1.0",
     "pixrem": "^3.0.2",
     "pleeease-filters": "^4.0.0",
@@ -116,7 +116,7 @@
     "postcss-calc": "^6.0.0",
     "postcss-color-function": "^4.0.0",
     "postcss-custom-media": "^6.0.0",
-    "postcss-custom-properties": "^6.0.1",
+    "postcss-custom-properties": "^6.1.0",
     "postcss-custom-selectors": "^4.0.1",
     "postcss-flexbugs-fixes": "^3.0.0",
     "postcss-import": "^10.0.0",
@@ -130,16 +130,16 @@
     "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
     "react-deep-force-update": "^2.0.1",
-    "react-error-overlay": "^1.0.7",
+    "react-error-overlay": "^1.0.8",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-test-renderer": "^15.5.4",
     "relay-compiler": "^1.1.0",
     "rimraf": "^2.6.1",
-    "sinon": "^2.3.4",
-    "stylelint": "^7.11.0",
+    "sinon": "^2.3.5",
+    "stylelint": "^7.12.0",
     "stylelint-config-standard": "^16.0.0",
     "stylelint-order": "^0.5.0",
-    "svg-url-loader": "^2.0.2",
+    "svg-url-loader": "^2.1.1",
     "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-bundle-analyzer": "^2.8.2",
@@ -180,10 +180,6 @@
     ]
   },
   "lint-staged": {
-    "*.{cmd,html,json,md,sh,txt,xml,yml}": [
-      "editorconfig-tools fix",
-      "git add"
-    ],
     "*.{js,jsx}": [
       "eslint --fix",
       "git add"
@@ -195,9 +191,9 @@
   },
   "scripts": {
     "update-schema": "babel-node tools/run updateSchema",
+    "precommit": "lint-staged",
     "lint:js": "eslint --ignore-path .gitignore --ignore-pattern \"!**/.*\" .",
     "lint:css": "stylelint \"src/**/*.{css,less,scss,sss}\"",
-    "lint:staged": "lint-staged",
     "lint": "yarn run lint:js && yarn run lint:css",
     "test": "mocha",
     "test:watch": "yarn run test -- --reporter min --watch",
